--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
+    "vercel": "^34.0.0",
     "wrangler": "^3.50.0"
   }
 }
