--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "thirdweb": "^5.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
