--- a/package.json
+++ b/package.json
@@ -15,39 +15,44 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@t3-oss/env-nextjs": "^0.9.2",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/nprogress": "^0.2.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "geist": "^1.2.1",
+    "clsx": "^2.1.1",
+    "geist": "^1.3.0",
     "lint-staged": "^15.2.2",
-    "lucide-react": "^0.316.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "openai": "^4.32.0",
+    "lucide-react": "^0.378.0",
+    "next": "latest",
+    "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
+    "nprogress": "^0.2.0",
+    "openai": "^4.47.1",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.1",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "thirdweb": "^5.6.0",
-    "zod": "^3.22.4"
+    "thirdweb": "^5.19.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.0",
-    "@cloudflare/next-on-pages": "^1.11.0",
-    "@cloudflare/workers-types": "^4.20240405.0",
+    "@biomejs/biome": "1.7.3",
+    "@cloudflare/next-on-pages": "^1.11.3",
+    "@cloudflare/workers-types": "^4.20240512.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "9.0.0",
-    "eslint-config-next": "14.2.1",
-    "lefthook": "^1.6.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "9.2.0",
+    "eslint-config-next": "14.2.3",
+    "lefthook": "^1.6.11",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5",
-    "vercel": "^34.0.0",
-    "wrangler": "^3.50.0"
+    "vercel": "^34.1.14",
+    "wrangler": "^3.55.0"
   },
   "resolutions": {
     "string-width": "4.2.3"
