--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,20 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "chronicle"
-compatibility_date = "2024-04-05"
+compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
+keep_vars = true
+
+[placement]
+mode = "smart"
+
+[[d1_databases]]
+binding = "CHRONICLE_DB"
+database_name = "chronicleDB"
+database_id = "adb02fff-468e-4b8c-921a-818d7f143d38"
+
+[[r2_buckets]]
+binding = "CHRONICLES_R2"
+bucket_name = "chronicle-generated-images"
+
+[triggers]
+crons = ["0 0 * * *"]
